Added parsing and reduction of complex conditions
Now you can feed any combination of && and || to the compiler,
Iridium should be able to distingush between conditions and
"actual" code. Now we need to work on recognizing in what relationship
the nodes considered part of a condition are, that should be doable.
The advanced-cfg branch is obsolete now. Apart from that, code cleaning
is important and should be done over the winter. This includes an API spec
that makes the method args and return values more interchangeable.
Also, add more security checks!

That's it for now, bye.

--- a/tests/conditions11_analysis/__do_global_ctors_aux.cfg
+++ b/tests/conditions11_analysis/__do_global_ctors_aux.cfg
@@ -41,10 +41,12 @@ __do_global_ctors_aux endp
 2 3
 postorder [3, 2, 1, 0]
 3:nothing, singular block
+knot None
 2:do-loop
 4:nothing, singular block
 1:block
 appendable to 4 True
 4:nothing, singular block
+knot None
 0:nothing
 id: 0 type: low-level
