--- a/tests/conditions11_analysis/__do_global_dtors_aux.cfg
+++ b/tests/conditions11_analysis/__do_global_dtors_aux.cfg
@@ -61,11 +61,14 @@ __do_global_dtors_aux endp
 postorder [5, 4, 3, 2, 1, 0]
 5:nothing, singular block
 4:nothing, singular block
+knot None
 3:do-loop
 6:nothing, singular block
 2:block
 appendable to 6 True
 6:nothing, singular block
+knot None
 1:nothing
+knot None
 0:nothing
 id: 0 type: low-level
