--- a/tests/conditions11_analysis/__libc_csu_init.cfg
+++ b/tests/conditions11_analysis/__libc_csu_init.cfg
@@ -59,10 +59,12 @@ __libc_csu_init endp
 2 3
 postorder [3, 2, 1, 0]
 3:nothing, singular block
+knot None
 2:do-loop
 4:nothing, singular block
 1:block
 appendable to 4 True
 4:nothing, singular block
+knot None
 0:nothing
 id: 0 type: low-level
