--- a/tests/conditions11_analysis/main.cfg
+++ b/tests/conditions11_analysis/main.cfg
@@ -49,29 +49,10 @@ main endp
 postorder [4, 3, 2, 1, 0]
 4:nothing, singular block
 3:nothing, singular block
+knot 4
 2:nothing
-1: if-then-with-or
-5:block
-appendable to 4 False
-6:nothing, singular block
-0:block
-appendable to 6 True
-6:nothing, singular block
-id: 6 type: block starts at 0:
-    |-- nodes:
-    |   id: 0 type: low-level
-    |   id: 5 type: if-then-with-or starts at 1:
-    |       then:3 condition2:2 condition1:1 
-    |       |-- nodes:
-    |       |   id: 1 type: low-level
-    |       |   id: 2 type: low-level
-    |       |   id: 3 type: low-level
-    |       |-- edges:
-    |       |       1 3
-    |       |       1 2
-    |       |       2 3
-    |   id: 4 type: low-level
-    |-- edges:
-    |       5 4
-    |       5 4
-    |       0 5
+knot 4
+1:nothing
+knot 4
+0:nothing
+id: 0 type: low-level
