--- a/tests/conditions18_analysis/deregister_tm_clones.cfg
+++ b/tests/conditions18_analysis/deregister_tm_clones.cfg
@@ -61,16 +61,10 @@ target of backedge  ... False
 branching ... True
 found simple structure.
 if-then: [4, 5]
-7
-0 1 2 3 6 7
-0 1
-1 3
-1 2
-2 3
-3 7
-7 2
-7 2
-reduction successful, applying recursive analysis ...
+reduction successful.
+current nodeset: | 0 | 1 | 2 | 3 | 6 | 7 | 
+current edgeset: | 2-3 | 0-1 | 3-7 | 7-2 | 1-3 | 1-2 | 
+applying recursive analysis ...
 ==================
 analyzing node 7 ...
 target of backedge  ... False
@@ -85,15 +79,10 @@ branching ... False
 found simple structure.
 block: [3, 7]
 appendable to 7 ... False
-8
-0 1 2 6 8
-0 1
-1 8
-1 2
-2 8
-8 2
-8 2
-reduction successful, applying recursive analysis ...
+reduction successful.
+current nodeset: | 0 | 1 | 2 | 6 | 8 | 
+current edgeset: | 1-8 | 2-8 | 1-2 | 0-1 | 8-2 | 
+applying recursive analysis ...
 ==================
 analyzing node 8 ...
 target of backedge  ... False
@@ -123,14 +112,10 @@ branching ... False
 found simple structure.
 block: [0, 1]
 appendable to 1 ... False
-9
-8 9 2 6
-9 8
-9 2
-2 8
-8 2
-8 2
-reduction successful, applying recursive analysis ...
+reduction successful.
+current nodeset: | 8 | 9 | 2 | 6 | 
+current edgeset: | 9-8 | 2-8 | 9-2 | 8-2 | 
+applying recursive analysis ...
 ==================
 analyzing node 9 ...
 target of backedge  ... False
