--- a/tests/conditions17_analysis/public.cfg
+++ b/tests/conditions17_analysis/public.cfg
@@ -1,13 +1,5 @@
-==================
-Reducing graph ...
-postorder of dfs-tree: [0]
-==================
-analyzing node 0 ...
-target of backedge  ... False
-branching ... False
-found simple structure.
-found nothing, block is singular.
-id: 0 type: low-level
+
+=== 0 0 11 ===
 public _term_proc
 _term_proc proc near
 push ebx
@@ -19,4 +11,30 @@ add esp, 8
 pop ebx
 retn 
 _term_proc endp
+
+==================
+Reducing graph ...
+postorder of dfs-tree: [0]
+==================
+analyzing node 0 ...
+target of backedge  ... False
+branching ... False
+found simple structure.
+block: [0]
+found nothing, block is singular.
+==================
+id: 0 type: low-level
++--------------------------+
+|public _term_proc         |
+|_term_proc proc near      |
+|push ebx                  |
+|sub esp, 8                |
+|call __x86_get_pc_thunk_bx|
+|add ebx, 11E7h            |
+|call __do_global_dtors_aux|
+|add esp, 8                |
+|pop ebx                   |
+|retn                      |
+|_term_proc endp           |
++--------------------------+
 
