--- a/tests/conditions12_analysis/public.cfg
+++ b/tests/conditions12_analysis/public.cfg
@@ -12,6 +12,29 @@ pop ebx
 retn 
 _term_proc endp
 
-postorder [0]
-0:nothing, singular block
+==================
+Reducing graph ...
+postorder of dfs-tree: [0]
+==================
+analyzing node 0 ...
+target of backedge  ... False
+branching ... False
+found simple structure.
+block: [0]
+found nothing, block is singular.
+==================
 id: 0 type: low-level
++--------------------------+
+|public _term_proc         |
+|_term_proc proc near      |
+|push ebx                  |
+|sub esp, 8                |
+|call __x86_get_pc_thunk_bx|
+|add ebx, 11EBh            |
+|call __do_global_dtors_aux|
+|add esp, 8                |
+|pop ebx                   |
+|retn                      |
+|_term_proc endp           |
++--------------------------+
+
