--- a/tests/conditions17_analysis/deregister_tm_clones.cfg
+++ b/tests/conditions17_analysis/deregister_tm_clones.cfg
@@ -1,40 +1,5 @@
-==================
-Reducing graph ...
-postorder of dfs-tree: [3, 2, 1, 0]
-==================
-analyzing node 3 ...
-target of backedge  ... False
-branching ... False
-found simple structure.
-found nothing, block is singular.
-==================
-analyzing node 2 ...
-target of backedge  ... False
-branching ... True
-found simple structure.
-found if-then.
-reduction successful, applying recursive analysis ...
-==================
-analyzing node 5 ...
-target of backedge  ... False
-branching ... False
-found simple structure.
-found nothing, block is singular.
-==================
-analyzing node 1 ...
-target of backedge  ... False
-branching ... False
-found simple structure.
-found nothing, block is singular.
-==================
-analyzing node 0 ...
-target of backedge  ... False
-branching ... True
-couldn't find simple structure.
-[[0, 1, 5, 1, 5, 1], [0, 5, 1, 5, 1, 5]]
-found knot-node: 1
-found nothing, block is singular.
-id: 0 type: low-level
+
+=== 0 0 11 ===
 deregister_tm_clones proc near
 var_18= dword ptr -18h
 push ebp
@@ -46,6 +11,113 @@ sub esp, 14h
 lea eax, [ebx+23h]
 lea edx, [ebx+20h]
 sub eax, edx
+
+
+=== 1 11 13 ===
 cmp eax, 6
 ja short loc_80483FB
 
+
+=== 2 13 18 ===
+loc_80483F5:
+add esp, 14h
+pop ebx
+pop ebp
+retn 
+
+
+=== 3 18 20 ===
+loc_80483FB:
+mov eax, [ebx-10h]
+
+
+=== 4 20 22 ===
+test eax, eax
+jz short loc_80483F5
+
+
+=== 5 22 25 ===
+mov [esp+18h+var_18], edx
+call eax
+jmp short loc_80483F5
+
+
+=== 6 25 26 ===
+deregister_tm_clones endp
+
+==================
+Reducing graph ...
+postorder of dfs-tree: [5, 4, 3, 2, 1, 0]
+==================
+analyzing node 5 ...
+target of backedge  ... False
+branching ... False
+found simple structure.
+block: [5]
+found nothing, block is singular.
+==================
+analyzing node 4 ...
+target of backedge  ... False
+branching ... True
+found simple structure.
+if-then: [4, 5]
+reduction successful.
+current nodeset: | 0 | 1 | 2 | 3 | 6 | 7 | 
+current edgeset: | 2-3 | 0-1 | 3-7 | 7-2 | 1-3 | 1-2 | 
+applying recursive analysis ...
+==================
+analyzing node 7 ...
+target of backedge  ... False
+branching ... False
+found simple structure.
+block: [7]
+found nothing, block is singular.
+==================
+analyzing node 3 ...
+target of backedge  ... False
+branching ... False
+found simple structure.
+block: [3, 7]
+appendable to 7 ... False
+reduction successful.
+current nodeset: | 0 | 1 | 2 | 6 | 8 | 
+current edgeset: | 1-8 | 2-8 | 1-2 | 0-1 | 8-2 | 
+applying recursive analysis ...
+==================
+analyzing node 8 ...
+target of backedge  ... False
+branching ... False
+found simple structure.
+block: [8]
+found nothing, block is singular.
+==================
+analyzing node 2 ...
+target of backedge  ... False
+branching ... False
+found simple structure.
+block: [2]
+found nothing, block is singular.
+==================
+analyzing node 1 ...
+target of backedge  ... False
+branching ... True
+couldn't find simple structure.
+found knot-node: 8
+block: [8]
+found nothing, block is singular.
+==================
+analyzing node 0 ...
+target of backedge  ... False
+branching ... False
+found simple structure.
+block: [0, 1]
+appendable to 1 ... False
+reduction successful.
+current nodeset: | 8 | 9 | 2 | 6 | 
+current edgeset: | 9-8 | 2-8 | 9-2 | 8-2 | 
+applying recursive analysis ...
+==================
+analyzing node 9 ...
+target of backedge  ... False
+branching ... True
+couldn't find simple structure.
