Fixed the "not all functions are found" issue, reanalyzed tests.

--- a/tests/conditions2_analysis/__libc_csu_init.cfg
+++ b/tests/conditions2_analysis/__libc_csu_init.cfg
@@ -48,7 +48,7 @@ cmp edi, esi
 jnz short loc_8048598
 
 
-=== 5 34 43 ===
+=== 5 34 42 ===
 loc_80485B9:
 add esp, 1Ch
 pop ebx
@@ -57,57 +57,6 @@ pop edi
 pop ebp
 retn 
 __libc_csu_init endp
-jmp short __libc_csu_fini
-
-encountered jump to non-local destination, probably a call.
-
-=== 6 43 59 ===
-align 10h
-public __libc_csu_fini
-__libc_csu_fini proc near
-rep retn
-__libc_csu_fini endp
-align 10h
- 
-__do_global_ctors_aux proc near
-push ebp
-mov ebp, esp
-push esi
-push ebx
-call __x86_get_pc_thunk_bx
-add ebx, 122Ah
-mov eax, [ebx-0ECh]
-lea esi, [ebx-0ECh]
-
-
-=== 7 59 61 ===
-cmp eax, 0FFFFFFFFh
-jz short loc_8048614
-
-
-=== 8 61 62 ===
-lea esi, [esi+0]
-
-
-=== 9 62 66 ===
-loc_8048608:
-sub esi, 4
-call eax
-mov eax, [esi]
-
-
-=== 10 66 68 ===
-cmp eax, 0FFFFFFFFh
-jnz short loc_8048608
-
-
-=== 11 68 74 ===
-loc_8048614:
-pop ebx
-pop esi
-pop ebp
-retn 
-__do_global_ctors_aux endp
 
 ==================
 Reducing graph ...
@@ -125,7 +74,7 @@ target of backedge  ... False
 branching ... True
 couldn't find simple structure.
 found knot-node: 5
-block: [11]
+block: [5]
 found nothing, block is singular.
 ==================
 analyzing node 3 ...
@@ -137,83 +86,82 @@ block: [3, 4]
 appendable to 4 ... False
 correcting to do-loop.
 reduction successful.
-current nodeset: | 0 | 1 | 2 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 | 
-current edgeset: | 7-8 | 0-1 | 1-2 | 1-5 | 7-11 | 10-9 | 10-11 | 8-9 | 2-12 | 6-7 | 12-5 | 9-10 | 
+current nodeset: | 0 | 1 | 2 | 5 | 6 | 
+current edgeset: | 2-6 | 1-2 | 1-5 | 0-1 | 6-5 | 
 applying recursive analysis ...
 ==================
-analyzing node 12 ...
+analyzing node 6 ...
 target of backedge  ... False
 branching ... False
 found simple structure.
-block: [12]
+block: [6]
 found nothing, block is singular.
 ==================
 analyzing node 2 ...
 target of backedge  ... False
 branching ... False
 found simple structure.
-block: [2, 12]
-appendable to 12 ... False
+block: [2, 6]
+appendable to 6 ... False
 reduction successful.
-current nodeset: | 0 | 1 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 13 | 
-current edgeset: | 7-8 | 0-1 | 1-5 | 7-11 | 10-9 | 10-11 | 13-5 | 8-9 | 1-13 | 6-7 | 9-10 | 
+current nodeset: | 0 | 1 | 5 | 7 | 
+current edgeset: | 7-5 | 1-5 | 0-1 | 1-7 | 
 applying recursive analysis ...
 ==================
-analyzing node 13 ...
+analyzing node 7 ...
 target of backedge  ... False
 branching ... False
 found simple structure.
-block: [13]
+block: [7]
 found nothing, block is singular.
 ==================
 analyzing node 1 ...
 target of backedge  ... False
 branching ... True
 found simple structure.
-if-then: [1, 13]
+if-then: [1, 7]
 reduction successful.
-current nodeset: | 0 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 14 | 
-current edgeset: | 0-14 | 7-8 | 7-11 | 10-9 | 10-11 | 8-9 | 6-7 | 14-5 | 9-10 | 
+current nodeset: | 0 | 8 | 5 | 
+current edgeset: | 8-5 | 0-8 | 
 applying recursive analysis ...
 ==================
-analyzing node 14 ...
+analyzing node 8 ...
 target of backedge  ... False
 branching ... False
 found simple structure.
-block: [5, 14]
+block: [8, 5]
 appendable to 5 ... False
 reduction successful.
-current nodeset: | 0 | 6 | 7 | 8 | 9 | 10 | 11 | 15 | 
-current edgeset: | 0-15 | 7-8 | 7-11 | 10-9 | 10-11 | 8-9 | 6-7 | 9-10 | 
+current nodeset: | 0 | 9 | 
+current edgeset: | 0-9 | 
 applying recursive analysis ...
 ==================
-analyzing node 15 ...
+analyzing node 9 ...
 target of backedge  ... False
 branching ... False
 found simple structure.
-block: [15]
+block: [9]
 found nothing, block is singular.
 ==================
 analyzing node 0 ...
 target of backedge  ... False
 branching ... False
 found simple structure.
-block: [0, 15]
-appendable to 15 ... True
-appending to existing block ... done: 15
+block: [0, 9]
+appendable to 9 ... True
+appending to existing block ... done: 9
 reduction successful.
-current nodeset: | 6 | 7 | 8 | 9 | 10 | 11 | 15 | 
-current edgeset: | 7-8 | 7-11 | 10-9 | 10-11 | 8-9 | 6-7 | 9-10 | 
+current nodeset: | 9 | 
 applying recursive analysis ...
 ==================
-analyzing node 15 ...
+analyzing node 9 ...
 target of backedge  ... False
 branching ... False
 found simple structure.
-block: [15]
+block: [9]
 found nothing, block is singular.
 ==================
-id: 15 type: block starts at 0:
+id: 9 type: block starts at 0:
     |-- nodes:
     |   id: 0 type: low-level
     |   +--------------------------+
@@ -240,8 +188,8 @@ id: 15 type: block starts at 0:
     |   |sar esi, 2                |
     |   +--------------------------+
     |   
-    |   id: 14 type: if-then starts at 1:
-    |       then:13 condition:1 
+    |   id: 8 type: if-then starts at 1:
+    |       then:7 condition:1 
     |       |-- nodes:
     |       |   id: 1 type: low-level
     |       |   +--------------------+
@@ -249,14 +197,14 @@ id: 15 type: block starts at 0:
     |       |   |jz short loc_80485B9|
     |       |   +--------------------+
     |       |   
-    |       |   id: 13 type: block starts at 2:
+    |       |   id: 7 type: block starts at 2:
     |       |       |-- nodes:
     |       |       |   id: 2 type: low-level
     |       |       |   +----------------+
     |       |       |   |lea esi, [esi+0]|
     |       |       |   +----------------+
     |       |       |   
-    |       |       |   id: 12 type: do-loop starts at 3:
+    |       |       |   id: 6 type: do-loop starts at 3:
     |       |       |       body:3 condition:4 
     |       |       |       |-- nodes:
     |       |       |       |   id: 3 type: low-level
@@ -282,25 +230,24 @@ id: 15 type: block starts at 0:
     |       |       |       |       4-3
     |       |       |       
     |       |       |-- edges:
-    |       |       |       2-12
+    |       |       |       2-6
     |       |       
     |       |-- edges:
-    |       |       1-13
+    |       |       1-7
     |       
     |   id: 5 type: low-level
-    |   +-------------------------+
-    |   |loc_80485B9:             |
-    |   |add esp, 1Ch             |
-    |   |pop ebx                  |
-    |   |pop esi                  |
-    |   |pop edi                  |
-    |   |pop ebp                  |
-    |   |retn                     |
-    |   |__libc_csu_init endp     |
-    |   |jmp short __libc_csu_fini|
-    |   +-------------------------+
+    |   +--------------------+
+    |   |loc_80485B9:        |
+    |   |add esp, 1Ch        |
+    |   |pop ebx             |
+    |   |pop esi             |
+    |   |pop edi             |
+    |   |pop ebp             |
+    |   |retn                |
+    |   |__libc_csu_init endp|
+    |   +--------------------+
     |   
     |-- edges:
-    |       14-5
-    |       0-14
+    |       8-5
+    |       0-8
     
