--- a/tests/conditions11_analysis/frame_dummy.cfg
+++ b/tests/conditions11_analysis/frame_dummy.cfg
@@ -35,7 +35,7 @@ pop ebx
 pop ebp
 jmp register_tm_clones
 
-encountered jump to non-local destination, probably a call.
+encountered jump to non-local                    destination, probably a call.
 
 === 5 22 23 ===
 frame_dummy endp
@@ -120,6 +120,14 @@ branching ... False
 found simple structure.
 block: [8]
 found nothing, block is singular.
+self 8 block 0 7 4 
+condition_node None
+self 7 if-then 1 6 
+condition_node 
+=== 1 9 11 ===
+test eax, eax
+jz short loc_8048501
+
 ==================
 id: 8 type: block starts at 0:
     |-- nodes:
