--- a/tests/conditions11_analysis/main.cfg
+++ b/tests/conditions11_analysis/main.cfg
@@ -124,6 +124,33 @@ branching ... False
 found simple structure.
 block: [8]
 found nothing, block is singular.
+self 8 block 0 7 5 
+condition_node None
+self 7 if-then 4 6 
+condition_node 6 condition 1 2 3 
+TRUE, FALSE [4] [5]
+node 
+=== 3 16 18 ===
+cmp [esp+20h+var_C], 2
+jnz short loc_804854E
+
+nz [4, 5]
+[] []
+node 
+=== 2 14 16 ===
+cmp [esp+20h+var_8], 1
+jz short loc_8048542
+
+nz [3, 4]
+[] []
+node 
+=== 1 12 14 ===
+cmp [esp+20h+var_4], 0
+jz short loc_8048542
+
+nz [2, 4]
+[] [3]
+id, description: 6 (1 || 2)(2 || 3)
 ==================
 id: 8 type: block starts at 0:
     |-- nodes:
@@ -153,7 +180,7 @@ id: 8 type: block starts at 0:
     |       |   |call _printf                      |
     |       |   +----------------------------------+
     |       |   
-    |       |   id: 6 type: condition starts at 1:
+    |       |   id: 6 type: condition starts at 1(1 || 2)(2 || 3):
     |       |       |-- nodes:
     |       |       |   id: 1 type: low-level
     |       |       |   +----------------------+
