--- a/tests/conditions17_analysis/__libc_csu_init.cfg
+++ b/tests/conditions17_analysis/__libc_csu_init.cfg
@@ -160,6 +160,14 @@ branching ... False
 found simple structure.
 block: [9]
 found nothing, block is singular.
+self 9 block 0 8 5 
+condition_node None
+self 8 if-then 1 7 
+condition_node 
+=== 1 21 23 ===
+test esi, esi
+jz short loc_8048599
+
 ==================
 id: 9 type: block starts at 0:
     |-- nodes:
