--- a/tests/conditions11_analysis/__do_global_ctors_aux.cfg
+++ b/tests/conditions11_analysis/__do_global_ctors_aux.cfg
@@ -142,6 +142,14 @@ branching ... False
 found simple structure.
 block: [9]
 found nothing, block is singular.
+self 9 block 0 8 5 
+condition_node None
+self 8 if-then 1 7 
+condition_node 
+=== 1 9 11 ===
+cmp eax, 0FFFFFFFFh
+jz short loc_8048614
+
 ==================
 id: 9 type: block starts at 0:
     |-- nodes:
