--- a/tests/conditions11_analysis/__do_global_dtors_aux.cfg
+++ b/tests/conditions11_analysis/__do_global_dtors_aux.cfg
@@ -215,6 +215,14 @@ branching ... False
 found simple structure.
 block: [14]
 found nothing, block is singular.
+self 14 block 0 13 8 
+condition_node None
+self 13 if-then 1 12 
+condition_node 
+=== 1 7 9 ===
+cmp byte ptr [ebx+20h], 0
+jnz short loc_80484BE
+
 ==================
 id: 14 type: block starts at 0:
     |-- nodes:
