--- a/tests/conditions17_analysis/_init_proc.cfg
+++ b/tests/conditions17_analysis/_init_proc.cfg
@@ -89,6 +89,14 @@ branching ... False
 found simple structure.
 block: [5]
 found nothing, block is singular.
+self 5 block 0 4 3 
+condition_node None
+self 4 if-then 1 2 
+condition_node 
+=== 1 6 8 ===
+test eax, eax
+jz short loc_804833A
+
 ==================
 id: 5 type: block starts at 0:
     |-- nodes:
