--- a/tests/conditions17_analysis/deregister_tm_clones.cfg
+++ b/tests/conditions17_analysis/deregister_tm_clones.cfg
@@ -143,6 +143,14 @@ branching ... False
 found simple structure.
 block: [10]
 found nothing, block is singular.
+self 10 block 0 9 2 
+condition_node None
+self 9 if-then 1 8 
+condition_node 
+=== 1 11 13 ===
+cmp eax, 6
+ja short loc_80483FB
+
 ==================
 id: 10 type: block starts at 0:
     |-- nodes:
