--- a/tests/conditions17_analysis/main.cfg
+++ b/tests/conditions17_analysis/main.cfg
@@ -81,6 +81,7 @@ branching ... True
 couldn't find simple structure.
 found knot-node: 5
 reducing condition: [2, 6]
+replaced edges: 2-5 6-5 6-1
 ==================
 analyzing node 1 ...
 target of backedge  ... 7
@@ -130,6 +131,22 @@ branching ... False
 found simple structure.
 block: [9]
 found nothing, block is singular.
+self 9 block 0 8 5 
+condition_node None
+self 8 do-loop 1 7 
+condition_node 7 condition 2 6 
+TRUE, FALSE [1] [5]
+node 6 block 3 4 
+nz [1, 5]
+[] []
+node 
+=== 2 13 15 ===
+cmp [esp+20h+var_4], 3
+jg short locret_804853D
+
+nz [5, 6]
+[] []
+id, description: 7 (2 && 6)
 ==================
 id: 9 type: block starts at 0:
     |-- nodes:
@@ -157,7 +174,7 @@ id: 9 type: block starts at 0:
     |       |   |call _printf                            |
     |       |   +----------------------------------------+
     |       |   
-    |       |   id: 7 type: condition starts at 2:
+    |       |   id: 7 type: condition starts at 2(2 && 6):
     |       |       |-- nodes:
     |       |       |   id: 2 type: low-level
     |       |       |   +-----------------------+
@@ -184,6 +201,11 @@ id: 9 type: block starts at 0:
     |       |       |       
     |       |       |-- edges:
     |       |       |       2-6
+    |       |       |   
+    |       |       |-- outer edges:
+    |       |       |       2-5
+    |       |       |       6-5
+    |       |       |       6-1
     |       |       
     |       |-- edges:
     |       |       1-7
