--- a/tests/conditions17_analysis/register_tm_clones.cfg
+++ b/tests/conditions17_analysis/register_tm_clones.cfg
@@ -127,6 +127,30 @@ branching ... False
 found simple structure.
 block: [9]
 found nothing, block is singular.
+self 9 block 8 1 
+condition_node None
+self 8 if-then 0 7 
+condition_node 
+=== 0 0 18 ===
+register_tm_clones proc near
+var_18= dword ptr -18h
+var_14= dword ptr -14h
+push ebp
+mov ebp, esp
+push ebx
+call __x86_get_pc_thunk_bx
+add ebx, 13CFh
+sub esp, 14h
+lea eax, [ebx+20h]
+lea edx, [ebx+20h]
+sub eax, edx
+sar eax, 2
+mov ecx, eax
+shr ecx, 1Fh
+add eax, ecx
+sar eax, 1
+jnz short loc_8048444
+
 ==================
 id: 9 type: block starts at 8:
     |-- nodes:
