Cleaned the repository

--- a/tests/conditions15_analysis/__libc_csu_init.cfg
+++ b/tests/conditions15_analysis/__libc_csu_init.cfg
@@ -58,9 +58,16 @@ pop ebp
 retn 
 __libc_csu_init endp
 
+0-1
+1-5
+1-2
+2-3
+3-4
+4-3
+4-5
 ==================
-Reducing graph ...
-postorder of dfs-tree: [5, 4, 3, 2, 1, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [5, 4, 3, 2, 1, 0]
 ==================
 analyzing node 5 ...
 target of backedge  ... False
