--- a/tests/conditions15_analysis/_init_proc.cfg
+++ b/tests/conditions15_analysis/_init_proc.cfg
@@ -26,9 +26,13 @@ pop ebx
 retn 
 _init_proc endp
 
+0-1
+1-3
+1-2
+2-3
 ==================
-Reducing graph ...
-postorder of dfs-tree: [3, 2, 1, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [3, 2, 1, 0]
 ==================
 analyzing node 3 ...
 target of backedge  ... False
