--- a/tests/conditions15_analysis/_start.cfg
+++ b/tests/conditions15_analysis/_start.cfg
@@ -32,8 +32,8 @@ nop
 _start endp
 
 ==================
-Reducing graph ...
-postorder of dfs-tree: [0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [0]
 ==================
 analyzing node 0 ...
 target of backedge  ... False
