--- a/tests/conditions15_analysis/frame_dummy.cfg
+++ b/tests/conditions15_analysis/frame_dummy.cfg
@@ -1,3 +1,4 @@
+encountered jump to non-local                    destination, probably a call.
 
 === 0 0 9 ===
 frame_dummy proc near
@@ -35,14 +36,15 @@ pop ebx
 pop ebp
 jmp register_tm_clones
 
-encountered jump to non-local destination, probably a call.
-
-=== 5 22 23 ===
-frame_dummy endp
-
+0-1
+1-4
+1-2
+2-4
+2-3
+3-4
 ==================
-Reducing graph ...
-postorder of dfs-tree: [4, 3, 2, 1, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [4, 3, 2, 1, 0]
 ==================
 analyzing node 4 ...
 target of backedge  ... False
