--- a/tests/conditions15_analysis/register_tm_clones.cfg
+++ b/tests/conditions15_analysis/register_tm_clones.cfg
@@ -44,13 +44,15 @@ mov [esp+18h+var_18], edx
 call ecx
 jmp short loc_804843E
 
-
-=== 5 31 32 ===
-register_tm_clones endp
-
+0-2
+0-1
+2-3
+3-1
+3-4
+4-1
 ==================
-Reducing graph ...
-postorder of dfs-tree: [4, 3, 2, 1, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [4, 3, 2, 1, 0]
 ==================
 analyzing node 4 ...
 target of backedge  ... False
