--- a/tests/conditions15_analysis/__do_global_ctors_aux.cfg
+++ b/tests/conditions15_analysis/__do_global_ctors_aux.cfg
@@ -40,9 +40,16 @@ pop ebp
 retn 
 __do_global_ctors_aux endp
 
+0-1
+1-5
+1-2
+2-3
+3-4
+4-3
+4-5
 ==================
-Reducing graph ...
-postorder of dfs-tree: [5, 4, 3, 2, 1, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [5, 4, 3, 2, 1, 0]
 ==================
 analyzing node 5 ...
 target of backedge  ... False
