--- a/tests/conditions15_analysis/__do_global_dtors_aux.cfg
+++ b/tests/conditions15_analysis/__do_global_dtors_aux.cfg
@@ -59,9 +59,20 @@ pop ebp
 retn 
 __do_global_dtors_aux endp
 
+0-1
+1-8
+1-2
+2-3
+3-7
+3-4
+4-5
+5-6
+6-5
+6-7
+7-8
 ==================
-Reducing graph ...
-postorder of dfs-tree: [7, 6, 5, 4, 3, 2, 8, 1, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [7, 6, 5, 4, 3, 2, 8, 1, 0]
 ==================
 analyzing node 7 ...
 target of backedge  ... False
