--- a/tests/conditions15_analysis/__libc_csu_fini.cfg
+++ b/tests/conditions15_analysis/__libc_csu_fini.cfg
@@ -5,8 +5,8 @@ rep retn
 __libc_csu_fini endp
 
 ==================
-Reducing graph ...
-postorder of dfs-tree: [0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [0]
 ==================
 analyzing node 0 ...
 target of backedge  ... False
