--- a/tests/conditions15_analysis/__x86_get_pc_thunk_bx.cfg
+++ b/tests/conditions15_analysis/__x86_get_pc_thunk_bx.cfg
@@ -6,8 +6,8 @@ retn
 __x86_get_pc_thunk_bx endp
 
 ==================
-Reducing graph ...
-postorder of dfs-tree: [0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [0]
 ==================
 analyzing node 0 ...
 target of backedge  ... False
