--- a/tests/conditions15_analysis/_term_proc.cfg
+++ b/tests/conditions15_analysis/_term_proc.cfg
@@ -12,8 +12,8 @@ retn
 _term_proc endp
 
 ==================
-Reducing graph ...
-postorder of dfs-tree: [0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [0]
 ==================
 analyzing node 0 ...
 target of backedge  ... False
