--- a/tests/conditions15_analysis/deregister_tm_clones.cfg
+++ b/tests/conditions15_analysis/deregister_tm_clones.cfg
@@ -41,13 +41,16 @@ mov [esp+18h+var_18], edx
 call eax
 jmp short loc_80483F5
 
-
-=== 6 25 26 ===
-deregister_tm_clones endp
-
+0-1
+1-3
+1-2
+3-4
+4-2
+4-5
+5-2
 ==================
-Reducing graph ...
-postorder of dfs-tree: [5, 4, 3, 2, 1, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [5, 4, 3, 2, 1, 0]
 ==================
 analyzing node 5 ...
 target of backedge  ... False
