--- a/tests/conditions15_analysis/main.cfg
+++ b/tests/conditions15_analysis/main.cfg
@@ -40,9 +40,15 @@ leave
 retn 
 main endp
 
+0-2
+1-2
+2-1
+2-3
+3-1
+3-4
 ==================
-Reducing graph ...
-postorder of dfs-tree: [4, 3, 1, 2, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [4, 3, 1, 2, 0]
 ==================
 analyzing node 4 ...
 target of backedge  ... False
@@ -70,7 +76,11 @@ loop... True
 couldn't find simple structure.
 found knot-node: 4
 reducing condition: [2, 3]
+replaced edges: 2-1 3-1 3-4
 while-loop: [5, 1]
+3 None
+2 1
+3 1
 reduction successful.
 current nodeset: | 0 | 4 | 6 | 
 current edgeset: | 0-6 | 6-4 | 
@@ -133,7 +143,7 @@ id: 7 type: block starts at 0:
     |   id: 6 type: while-loop starts at 5:
     |       body:1 condition:5 
     |       |-- nodes:
-    |       |   id: 5 type: condition starts at 2:
+    |       |   id: 5 type: condition starts at 2(2 || 3):
     |       |       |-- nodes:
     |       |       |   id: 2 type: low-level
     |       |       |   +----------------------+
@@ -150,6 +160,11 @@ id: 7 type: block starts at 0:
     |       |       |   
     |       |       |-- edges:
     |       |       |       2-3
+    |       |       |   
+    |       |       |-- outer edges:
+    |       |       |       2-1
+    |       |       |       3-1
+    |       |       |       3-4
     |       |       
     |       |   id: 1 type: low-level
     |       |   +----------------------------------------+
