--- a/tests/conditions_analysis/sub_401180.cfg
+++ b/tests/conditions_analysis/sub_401180.cfg
@@ -427,9 +427,92 @@ mov [esp+80h+var_80], eax
 call exit
 sub_401180 endp
 
+0-1
+1-59
+1-2
+2-6
+3-4
+4-54
+4-5
+5-6
+6-7
+7-4
+7-8
+8-9
+9-56
+9-10
+10-11
+11-60
+11-12
+12-13
+13-14
+14-58
+14-15
+15-17
+15-16
+16-17
+17-18
+18-20
+18-19
+19-20
+20-21
+21-23
+21-22
+22-23
+23-24
+24-30
+24-25
+25-39
+26-38
+26-27
+27-36
+27-28
+28-29
+29-30
+30-31
+31-26
+31-32
+32-33
+33-29
+34-35
+35-38
+35-36
+36-37
+37-35
+37-38
+38-39
+39-40
+40-43
+40-41
+41-42
+42-43
+43-44
+44-49
+44-45
+45-46
+46-47
+47-46
+47-48
+48-49
+49-50
+50-61
+50-51
+51-53
+51-52
+52-53
+53-54
+54-55
+55-10
+55-56
+56-57
+57-15
+57-58
+58-15
+59-2
+60-13
 ==================
-Reducing graph ...
-postorder of dfs-tree: [59, 5, 4, 38, 35, 37, 36, 28, 27, 26, 29, 33, 32, 31, 30, 48, 47, 46, 45, 61, 60, 14, 13, 12, 11, 10, 55, 54, 53, 52, 51, 50, 49, 44, 43, 42, 41, 40, 39, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 58, 57, 56, 9, 8, 7, 6, 2, 1, 0]
+Analyzer is reducing graph ...
+Postorder of dfs-tree: [59, 5, 4, 38, 35, 37, 36, 28, 27, 26, 29, 33, 32, 31, 30, 48, 47, 46, 45, 61, 60, 14, 13, 12, 11, 10, 55, 54, 53, 52, 51, 50, 49, 44, 43, 42, 41, 40, 39, 25, 24, 23, 22, 21, 20, 19, 18, 17, 16, 15, 58, 57, 56, 9, 8, 7, 6, 2, 1, 0]
 ==================
 analyzing node 59 ...
 target of backedge  ... False
@@ -450,3 +533,7 @@ target of backedge  ... 3
 branching ... True
 loop... True
 couldn't find simple structure.
+found knot-node: 60
+found knot-node: 60
+found knot-node: 60
+found knot-node: 60
