Added a presentation, fixed minor bugs in data analysis, created some FIXME's / TODO's

--- a/tests/conditions15_analysis/__libc_csu_fini.cfg
+++ b/tests/conditions15_analysis/__libc_csu_fini.cfg
@@ -14,7 +14,8 @@ branching ... False
 found simple structure.
 block: [0]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 0
 id: 0 type: low-level
 +-------------------------+
 |__libc_csu_fini proc near|
