--- a/tests/conditions15_analysis/__libc_csu_init.cfg
+++ b/tests/conditions15_analysis/__libc_csu_init.cfg
@@ -167,7 +167,8 @@ branching ... False
 found simple structure.
 block: [9]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 9
 id: 9 type: block starts at 0:
     |-- nodes:
     |   id: 0 type: low-level
