--- a/tests/conditions15_analysis/_init_proc.cfg
+++ b/tests/conditions15_analysis/_init_proc.cfg
@@ -93,7 +93,8 @@ branching ... False
 found simple structure.
 block: [5]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 5
 id: 5 type: block starts at 0:
     |-- nodes:
     |   id: 0 type: low-level
