--- a/tests/conditions15_analysis/_term_proc.cfg
+++ b/tests/conditions15_analysis/_term_proc.cfg
@@ -21,7 +21,8 @@ branching ... False
 found simple structure.
 block: [0]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 0
 id: 0 type: low-level
 +--------------------------+
 |_term_proc proc near      |
