--- a/tests/conditions15_analysis/frame_dummy.cfg
+++ b/tests/conditions15_analysis/frame_dummy.cfg
@@ -122,7 +122,8 @@ branching ... False
 found simple structure.
 block: [8]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 8
 id: 8 type: block starts at 0:
     |-- nodes:
     |   id: 0 type: low-level
