--- a/tests/conditions15_analysis/register_tm_clones.cfg
+++ b/tests/conditions15_analysis/register_tm_clones.cfg
@@ -129,7 +129,8 @@ branching ... False
 found simple structure.
 block: [9]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 9
 id: 9 type: block starts at 8:
     |-- nodes:
     |   id: 8 type: if-then starts at 0:
