--- a/tests/conditions15_analysis/__do_global_dtors_aux.cfg
+++ b/tests/conditions15_analysis/__do_global_dtors_aux.cfg
@@ -226,7 +226,8 @@ branching ... False
 found simple structure.
 block: [14]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 14
 id: 14 type: block starts at 0:
     |-- nodes:
     |   id: 0 type: low-level
