--- a/tests/conditions15_analysis/deregister_tm_clones.cfg
+++ b/tests/conditions15_analysis/deregister_tm_clones.cfg
@@ -146,7 +146,8 @@ branching ... False
 found simple structure.
 block: [10]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 10
 id: 10 type: block starts at 0:
     |-- nodes:
     |   id: 0 type: low-level
