--- a/tests/conditions15_analysis/main.cfg
+++ b/tests/conditions15_analysis/main.cfg
@@ -61,6 +61,10 @@ analyzing node 3 ...
 target of backedge  ... False
 branching ... True
 couldn't find simple structure.
+No reduction of condition possible, retrying...
+No reduction of condition possible, retrying...
+No reduction of condition possible, retrying...
+No reduction of condition possible, retrying...
 ==================
 analyzing node 1 ...
 target of backedge  ... False
@@ -78,9 +82,6 @@ found knot-node: 4
 reducing condition: [2, 3]
 replaced edges: 2-1 3-1 3-4
 while-loop: [5, 1]
-3 None
-2 1
-3 1
 reduction successful.
 current nodeset: | 0 | 4 | 6 | 
 current edgeset: | 0-6 | 6-4 | 
@@ -121,7 +122,8 @@ branching ... False
 found simple structure.
 block: [7]
 found nothing, block is singular.
-==================
+==================RESULTS==================
+Graph starting at node 7
 id: 7 type: block starts at 0:
     |-- nodes:
     |   id: 0 type: low-level
