--- a/docs/test_analysis/main.cfg
+++ b/docs/test_analysis/main.cfg
@@ -16,23 +16,23 @@ mov ebp, esp
 push ecx
 sub esp, 34h
 sub esp, 0Ch
-push offset aEingabeInBuff
+push offset aEingabeInBuffe
 call _puts
 add esp, 10h
 sub esp, 8
 lea eax, [ebp+var_2C]
 push eax
-push offset a20
+push offset a20s
 call ___isoc99_scanf
 add esp, 10h
 sub esp, 0Ch
-push offset aAnzahlSchleif
+push offset aAnzahlSchleife
 call _puts
 add esp, 10h
 sub esp, 8
 lea eax, [ebp+var_14]
 push eax
-push offset a
+push offset aD
 call ___isoc99_scanf
 add esp, 10h
 mov [ebp+var_C], 0
@@ -42,13 +42,13 @@ jmp short loc_8048630
 === 1 37 50 ===
 loc_80485C7:
 sub esp, 0Ch
-push offset aAnzahlInnerer
+push offset aAnzahlInnererS
 call _puts
 add esp, 10h
 sub esp, 8
 lea eax, [ebp+var_18]
 push eax
-push offset a
+push offset aD
 call ___isoc99_scanf
 add esp, 10h
 mov [ebp+var_10], 0
@@ -68,7 +68,7 @@ jnz short loc_8048610
 
 === 4 55 60 ===
 sub esp, 0Ch
-push offset aDGerade
+push offset aDGerade_
 call _puts
 add esp, 10h
 jmp short loc_8048620
@@ -77,7 +77,7 @@ jmp short loc_8048620
 === 5 60 65 ===
 loc_8048610:
 sub esp, 0Ch
-push offset aDUngerade
+push offset aDUngerade_
 call _puts
 add esp, 10h
 
@@ -361,45 +361,45 @@ Graph starting at node 20
 id: 20 type: block starts at 0:
     |-- nodes:
     |   id: 0 type: low-level
-    |   +--------------------------+
-    |   |main proc near            |
-    |   |var_2C= dword ptr -2Ch    |
-    |   |var_18= dword ptr -18h    |
-    |   |var_14= dword ptr -14h    |
-    |   |var_10= dword ptr -10h    |
-    |   |var_C= dword ptr -0Ch     |
-    |   |var_4= dword ptr -4       |
-    |   |arg_0= dword ptr  4       |
-    |   |lea ecx, [esp+arg_0]      |
-    |   |and esp, 0FFFFFFF0h       |
-    |   |push dword ptr [ecx-4]    |
-    |   |push ebp                  |
-    |   |mov ebp, esp              |
-    |   |push ecx                  |
-    |   |sub esp, 34h              |
-    |   |sub esp, 0Ch              |
-    |   |push offset aEingabeInBuff|
-    |   |call _puts                |
-    |   |add esp, 10h              |
-    |   |sub esp, 8                |
-    |   |lea eax, [ebp+var_2C]     |
-    |   |push eax                  |
-    |   |push offset a20           |
-    |   |call ___isoc99_scanf      |
-    |   |add esp, 10h              |
-    |   |sub esp, 0Ch              |
-    |   |push offset aAnzahlSchleif|
-    |   |call _puts                |
-    |   |add esp, 10h              |
-    |   |sub esp, 8                |
-    |   |lea eax, [ebp+var_14]     |
-    |   |push eax                  |
-    |   |push offset a             |
-    |   |call ___isoc99_scanf      |
-    |   |add esp, 10h              |
-    |   |mov [ebp+var_C], 0        |
-    |   |jmp short loc_8048630     |
-    |   +--------------------------+
+    |   +---------------------------+
+    |   |main proc near             |
+    |   |var_2C= dword ptr -2Ch     |
+    |   |var_18= dword ptr -18h     |
+    |   |var_14= dword ptr -14h     |
+    |   |var_10= dword ptr -10h     |
+    |   |var_C= dword ptr -0Ch      |
+    |   |var_4= dword ptr -4        |
+    |   |arg_0= dword ptr  4        |
+    |   |lea ecx, [esp+arg_0]       |
+    |   |and esp, 0FFFFFFF0h        |
+    |   |push dword ptr [ecx-4]     |
+    |   |push ebp                   |
+    |   |mov ebp, esp               |
+    |   |push ecx                   |
+    |   |sub esp, 34h               |
+    |   |sub esp, 0Ch               |
+    |   |push offset aEingabeInBuffe|
+    |   |call _puts                 |
+    |   |add esp, 10h               |
+    |   |sub esp, 8                 |
+    |   |lea eax, [ebp+var_2C]      |
+    |   |push eax                   |
+    |   |push offset a20s           |
+    |   |call ___isoc99_scanf       |
+    |   |add esp, 10h               |
+    |   |sub esp, 0Ch               |
+    |   |push offset aAnzahlSchleife|
+    |   |call _puts                 |
+    |   |add esp, 10h               |
+    |   |sub esp, 8                 |
+    |   |lea eax, [ebp+var_14]      |
+    |   |push eax                   |
+    |   |push offset aD             |
+    |   |call ___isoc99_scanf       |
+    |   |add esp, 10h               |
+    |   |mov [ebp+var_C], 0         |
+    |   |jmp short loc_8048630      |
+    |   +---------------------------+
     |   
     |   id: 19 type: while-loop starts at 18:
     |       body:17 condition:18 
@@ -424,21 +424,21 @@ id: 20 type: block starts at 0:
     |       |   id: 17 type: block starts at 1:
     |       |       |-- nodes:
     |       |       |   id: 1 type: low-level
-    |       |       |   +--------------------------+
-    |       |       |   |loc_80485C7:              |
-    |       |       |   |sub esp, 0Ch              |
-    |       |       |   |push offset aAnzahlInnerer|
-    |       |       |   |call _puts                |
-    |       |       |   |add esp, 10h              |
-    |       |       |   |sub esp, 8                |
-    |       |       |   |lea eax, [ebp+var_18]     |
-    |       |       |   |push eax                  |
-    |       |       |   |push offset a             |
-    |       |       |   |call ___isoc99_scanf      |
-    |       |       |   |add esp, 10h              |
-    |       |       |   |mov [ebp+var_10], 0       |
-    |       |       |   |jmp short loc_8048624     |
-    |       |       |   +--------------------------+
+    |       |       |   +---------------------------+
+    |       |       |   |loc_80485C7:               |
+    |       |       |   |sub esp, 0Ch               |
+    |       |       |   |push offset aAnzahlInnererS|
+    |       |       |   |call _puts                 |
+    |       |       |   |add esp, 10h               |
+    |       |       |   |sub esp, 8                 |
+    |       |       |   |lea eax, [ebp+var_18]      |
+    |       |       |   |push eax                   |
+    |       |       |   |push offset aD             |
+    |       |       |   |call ___isoc99_scanf       |
+    |       |       |   |add esp, 10h               |
+    |       |       |   |mov [ebp+var_10], 0        |
+    |       |       |   |jmp short loc_8048624      |
+    |       |       |   +---------------------------+
     |       |       |   
     |       |       |   id: 16 type: while-loop starts at 15:
     |       |       |       body:14 condition:15 
@@ -481,20 +481,20 @@ id: 20 type: block starts at 0:
     |       |       |       |       |       |   id: 4 type: low-level
     |       |       |       |       |       |   +---------------------+
     |       |       |       |       |       |   |sub esp, 0Ch         |
-    |       |       |       |       |       |   |push offset aDGerade |
+    |       |       |       |       |       |   |push offset aDGerade_|
     |       |       |       |       |       |   |call _puts           |
     |       |       |       |       |       |   |add esp, 10h         |
     |       |       |       |       |       |   |jmp short loc_8048620|
     |       |       |       |       |       |   +---------------------+
     |       |       |       |       |       |   
     |       |       |       |       |       |   id: 5 type: low-level
-    |       |       |       |       |       |   +----------------------+
-    |       |       |       |       |       |   |loc_8048610:          |
-    |       |       |       |       |       |   |sub esp, 0Ch          |
-    |       |       |       |       |       |   |push offset aDUngerade|
-    |       |       |       |       |       |   |call _puts            |
-    |       |       |       |       |       |   |add esp, 10h          |
-    |       |       |       |       |       |   +----------------------+
+    |       |       |       |       |       |   +-----------------------+
+    |       |       |       |       |       |   |loc_8048610:           |
+    |       |       |       |       |       |   |sub esp, 0Ch           |
+    |       |       |       |       |       |   |push offset aDUngerade_|
+    |       |       |       |       |       |   |call _puts             |
+    |       |       |       |       |       |   |add esp, 10h           |
+    |       |       |       |       |       |   +-----------------------+
     |       |       |       |       |       |   
     |       |       |       |       |       |-- edges:
     |       |       |       |       |       |       3-5
